objects/ErrorTracker__c.object
<CustomObject>
    <description>This is a generic Object to be used to stamp the error and the cause of the error so that IT team can Track the reason for the Errors</description>
    <fields>
        <fullName>BatchId__c</fullName>
        <description>This field is used to Hold the Id the Batch that got Executed</description>
        <label>BatchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No of Customer Failure, while batch execution</description>
        <label>Primary - Customer Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Captures the Number of Customer Site Failure</description>
        <label>Primary - Customer Site Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsMadeActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to Track if the User is made Active before the Account Assignment Batch is Running</description>
        <label>IsMadeActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ispurged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for Account Assignment to check if the data is Purged</description>
        <label>Ispurged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Customer_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No of Overlay on Customer Failure, while batch execution</description>
        <label>Overlay - Customer Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Customer_Site_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Captures the Number of Overlay Customer Site Failure</description>
        <label>Overlay - Customer Site Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Prospect_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No. Of Overlay Prospect failures while batch Execution</description>
        <label>Overlay - Prospect Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Prospect_Site_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This holds the data of the Overlay Prospect Site Failure</description>
        <label>Overlay - Prospect Site Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No. Of Prospect failures while batch Execution</description>
        <label>Primary - Prospect Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Site_Failure__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This holds the data of the Prospect Site Failure</description>
        <label>Primary - Prospect Site Failure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>To Save the UserID through for which exception is recorded</description>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ErrorTracker</label>
    <nameField>
        <label>ErrorTracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorTracker</pluralLabel>
    <recordTypes>
        <fullName>Assignment</fullName>
        <active>true</active>
        <description>This is used for Account Assignment</description>
        <label>Assignment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>